# python_labs

./: README.md  desktop.ini
codes/: 01.py
src/: 03_discount_vat.py  04_minutes_to_hhmm.py  arrays.py  matrix.py  pyproject.toml  text_stats.py  tuples.py
src/data/: input.txt  report.csv
src/data/lab08/: students_output.json
src/data/samples/: people.csv  people.json  samp.txt
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab06/lib_with_funcs_from_lab05/: csv_xlsx.py  json_csv.py
src/lab07/: README.md
src/lab07/tests/: test_json_csv.py  test_text.py
src/lab07/tests/lib_4json_csv/: json_csv4lib.py
src/lab07/tests/lib_4text/: text.py
src/lab08/: RM_8.md  __init__.py  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
