[project]
name = "python_labs"
version = "0.1.0"
description = "Проект с лабораторными работами по ПиА"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
   "pytest>=9.0.1"
]


[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(
  ^\.(venv|env)/|
  ^data/|
  ^images/
)

'''